--- a/4.html
+++ b/4.html
@@ -25,7 +25,7 @@
         btn.addEventListener("click",()=>{
             let a=Number.parseInt(inputa.value);
             let b=Number.parseInt(inputb.value);
-            pResultado.innerHTM=a+b;
+            pResultado.innerHTML=Math.trunc(Math.random(a, b)*10);
         })
     </script>
 </body>
